Added eGHL SDK (android)

--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -94,12 +94,12 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.example"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -136,10 +136,21 @@ android {
     }
 }
 
+repositories{
+    flatDir{
+        dirs 'libs'
+    }
+
+}
+
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile 'com.android.support:appcompat-v7:25.4.0'
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile(name: 'eghl-sdk-v2.3.1', ext: 'aar')
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:design:25.4.0'
 }
 
 // Run this once to be able to run the application with BUCK
