--- a/Example/package.json
+++ b/Example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Example",
+  "name": "AwesomeProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,14 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.3.2",
-    "react-native": "0.55.3"
+    "react": "16.5.0",
+    "react-native": "0.57.2"
   },
   "devDependencies": {
-    "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-test-renderer": "16.3.2"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.48.0",
+    "react-test-renderer": "16.5.0"
   },
   "jest": {
     "preset": "react-native"
