--- a/AwesomeProject/android/app/build.gradle
+++ b/AwesomeProject/android/app/build.gradle
@@ -121,6 +121,8 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
+    ndkVersion rootProject.ext.ndkVersion
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     compileOptions {
@@ -173,7 +175,8 @@ android {
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
-                        versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
+                        defaultConfig.versionCode * 1000 + versionCodes.get(abi)
+
             }
 
         }
@@ -192,7 +195,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    compile(name: 'eghl-sdk-v2.5.5', ext: 'aar')
+    compile(name: 'eghl-sdk-v2.5.6', ext: 'aar')
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:appcompat-v7:28.0.0'
     compile "com.facebook.react:react-native:+"
