--- a/AwesomeProject/ios/Podfile
+++ b/AwesomeProject/ios/Podfile
@@ -6,7 +6,11 @@ platform :ios, '10.0'
 target 'AwesomeProject' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
 
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/'
@@ -20,17 +24,9 @@ target 'AwesomeProject' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!()
+  
   post_install do |installer|
-    flipper_post_install(installer)
-  end
-end
-
-target 'AwesomeProject-tvOS' do
-  # Pods for AwesomeProject-tvOS
-
-  target 'AwesomeProject-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
+    react_native_post_install(installer)
   end
 end
